# legal-research-platform

./: .gitignore  README.md
docs/: a2a-copilot-integration-report.md  integration-research-and-design.md
legal-research-agent/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
legal-research-agent/src/legal_research_agent/: __init__.py  config.py  content.py  db.py  jobs.py  main.py  progress.py  schemas.py
legal-research-mcp/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
legal-research-mcp/src/legal_research_mcp/: __init__.py  backend.py  config.py  profiles.py  server.py  stdio.py  widget.py
