[project]
name = "legal-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Santiago Ontañón Sánchez", email = "sontanon@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
legal-research-agent = "legal_research_agent:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
