[project]
name = "legal-research-mcp"
version = "0.1.0"
description = "MCP adapter for the long-running legal research agent (widget + three-tool recipes, per-client feature gating)"
readme = "README.md"
authors = [
    { name = "Santiago Ontañón Sánchez", email = "sontanon@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp[apps]>=3.4.2",
    "httpx>=0.28",
    "pydantic-settings>=2.14",
]

[project.scripts]
legal-research-mcp = "legal_research_mcp:main"
legal-research-mcp-stdio = "legal_research_mcp.stdio:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true
